Spacing fixes, fixed used-by section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -483,7 +483,7 @@ nav#index li:last-child {
 }
 
 #used-by img+img {
-	margin-left: 15px;
+	margin-left: 22px;
 }
 
 /* Tweaking vertical alignment */
@@ -545,7 +545,7 @@ nav#index li:last-child {
 
 #code-block {
 	max-width: 100%;
-	margin-top: 70px; margin-bottom: 40px;
+	margin-top: 70px; margin-bottom: 5px;
 	position: relative;
 }
 
@@ -695,7 +695,7 @@ table.last {
 /* ==================================================== */
 
 
-@media only screen and (min-width: 1300px) {
+@media only screen and (min-width: 1200px) {
 body {
 	padding-left: 260px;
 }
@@ -724,13 +724,15 @@ body {
 	padding:60px;
 } 
 
-#wrapper {
-	padding:60px 40px;
-}
+#wrapper { padding:60px 40px; }
 
-#wrapper.index {
-	padding: 60px 0;
-}
+#wrapper.index { padding: 60px 0; }
+
+/* Switch from 70 to 60px vertically VSPACE */
+#example-block { margin: 60px 0; }
+#used-by { margin-bottom: 60px; }
+#code-block { margin-top: 60px; }
+#code-section { margin-bottom: 60px; }
 
 #features li {
 	max-width: 240px;
@@ -788,17 +790,17 @@ nav#index {
 }
 
 /* Vertical Spacing */
+/*40px */
 hr {
 	margin: 40px auto;
 }
 
 h1 {
-	font-size: 40px;
+	font-size: 44px;
 }
 
 h2.headline {
 	font-size: 24px;
-	margin-bottom: 40px; 
 }
 
 #line-block section {
@@ -1012,6 +1014,8 @@ h2.headline {
 }
 
 @media only screen and (max-width: 440px) {
+
+/* Vertical spacing = 40/20 */
 #wrapper {
 	padding:20px;
 	padding-top: 40px;
